Implement user authentication with registration and login functionality implemented MongoDB connection add the user schema and model and added validation for the required fields , implemented user registration endpoint and input validation using Joi and Hash passowrd with bcrypt implemented user login which wil validate credentials and generate and return JWT  on successful login improved error handling with middleware implementation and log errors to the console for debugging

--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,6 +1,11 @@
 {
 	"dependencies": {
-		"express": "^4.21.2"
+		"bcryptjs": "^3.0.0",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"joi": "^17.13.3",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.10.0"
 	},
 	"packageManager": "pnpm@10.3.0+sha512.ee592eda8815a8a293c206bb0917c4bb0ff274c50def7cbc17be05ec641fc2d1b02490ce660061356bd0d126a4d7eb2ec8830e6959fb8a447571c631d5a2442d"
 }
