--- a/BACKEND/.gitignore
+++ b/BACKEND/.gitignore
@@ -1,5 +1,8 @@
 # Ignore node modules directory
 node_modules/
 
-# Ignore pnpm lockfiels
+# Ignore pnpm lock file
 pnpm-lock.yaml
+
+# Ignore .env files
+.env
