--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,3 +1,3 @@
-MONGO_KEY= mongodb+srv://joshua-wilson:hello123abc@cluster0.x6sfi.mongodb.net/DIGITAL_RESUME_BUILDER?retryWrites=true&w=majority
-JWT_SECRET= hello123abc
+MONGO_KEY=mongodb+srv://kobby_rgu:%2ATheLord-Good%2A@cluster0.x6sfi.mongodb.net/DIGITAL_RESUME_BUILDER?retryWrites=true&w=majority
+JWT_SECRET=*TheLord-Good*
 PORT=5000
