--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -7,11 +7,17 @@
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-rate-limit": "^7.5.0",
+		"han": "^0.0.7",
+		"handlebars": "^4.7.8",
 		"helmet": "^8.1.0",
+		"html-pdf": "^3.0.1",
+		"html-pdf-node": "^1.0.8",
 		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
+		"moment": "^2.30.1",
 		"mongoose": "^8.10.0",
 		"morgan": "^1.10.0",
+		"pdfkit": "^0.16.0",
 		"puppeteer": "^24.4.0"
 	},
 	"packageManager": "pnpm@10.3.0+sha512.ee592eda8815a8a293c206bb0917c4bb0ff274c50def7cbc17be05ec641fc2d1b02490ce660061356bd0d126a4d7eb2ec8830e6959fb8a447571c631d5a2442d"
